--- a/snakemake_tutorial/Snakefile
+++ b/snakemake_tutorial/Snakefile
@@ -1,8 +1,27 @@
 rule bwa_map:
     input:
         "data/genome.fa",
-        "data/samples/A.fastq",
+        "data/samples/{sample}.fastq",
     output:
-        "mapped_reads/A.bam",
+        "mapped_reads/{sample}.bam",
     shell:
         "bwa mem {input} | samtools view -Sb - > {output}"
+
+
+rule samtools_sort:
+    input:
+        "mapped_reads/{sample}.bam",
+    output:
+        "sorted_reads/{sample}.bam",
+    shell:
+        "samtools sort -T sorted_reads/{wildcards.sample} "
+        "-O bam {input} > {output}"
+
+
+rule samtools_index:
+    input:
+        "sorted_reads/{sample}.bam",
+    output:
+        "sorted_reads/{sample}.bam.bai",
+    shell:
+        "samtools index {input}"
