--- a/02_makefiles/Makefile
+++ b/02_makefiles/Makefile
@@ -1,3 +1,9 @@
 # Count words
 isles.dat : books/isles.txt
 	python countwords.py books/isles.txt isles.dat
+
+abyss.dat : books/abyss.txt
+	python countwords.py books/abyss.txt abyss.dat
+
+clean :
+	rm -f *.dat
