Marks the clean target as .PHONY

--- a/02_makefiles/Makefile
+++ b/02_makefiles/Makefile
@@ -5,5 +5,6 @@ isles.dat : books/isles.txt
 abyss.dat : books/abyss.txt
 	python countwords.py books/abyss.txt abyss.dat
 
+.PHONY : clean
 clean :
 	rm -f *.dat
