--- a/02_makefiles/Makefile
+++ b/02_makefiles/Makefile
@@ -1,4 +1,7 @@
-# Count words
+# Count words.
+.PHONY : dats
+dats: isles.dat abyss.dat
+
 isles.dat : books/isles.txt
 	python countwords.py books/isles.txt isles.dat
 
