--- a/02_makefiles/Makefile
+++ b/02_makefiles/Makefile
@@ -11,3 +11,7 @@ abyss.dat : books/abyss.txt
 .PHONY : clean
 clean :
 	rm -f *.dat
+
+.PHONY : list
+list:
+	@LC_ALL=C $(MAKE) -pRrq -f $(lastword $(MAKEFILE_LIST)) : 2>/dev/null | awk -v RS= -F: '/^# File/,/^# Finished Make data base/ {if ($$1 !~ "^[#.]") {print $$1}}' | sort | egrep -v -e '^[^[:alnum:]]' -e '^$@$$'
