--- a/02_makefiles/Makefile
+++ b/02_makefiles/Makefile
@@ -1,6 +1,9 @@
 # Count words.
+results.txt : isles.dat abyss.dat last.dat
+	python testzipf.py isles.dat abyss.dat last.dat > results.txt
+
 .PHONY : dats
-dats : isles.dat abyss.dat
+dats : isles.dat abyss.dat last.dat
 
 isles.dat : books/isles.txt
 	python countwords.py books/isles.txt isles.dat
@@ -8,9 +11,12 @@ isles.dat : books/isles.txt
 abyss.dat : books/abyss.txt
 	python countwords.py books/abyss.txt abyss.dat
 
+last.dat : books/last.txt
+	python countwords.py books/last.txt last.dat
+
 .PHONY : clean
 clean :
-	rm -f *.dat
+	rm -f *.dat results.txt
 
 .PHONY : list
 list:
