--- a/03_automatic_variables/Makefile
+++ b/03_automatic_variables/Makefile
@@ -1,6 +1,6 @@
 # Generate summary table.
 results.txt : isles.dat abyss.dat last.dat
-	python testzipf.py isles.dat abyss.dat last.dat > $@
+	python testzipf.py $^ > $@
 
 # Count words.
 .PHONY : dats
