Uses automatic_variables for target and first dependency for each dat rule

--- a/03_automatic_variables/Makefile
+++ b/03_automatic_variables/Makefile
@@ -7,13 +7,13 @@ results.txt : isles.dat abyss.dat last.dat
 dats : isles.dat abyss.dat last.dat
 
 isles.dat : books/isles.txt
-	python countwords.py books/isles.txt isles.dat
+	python countwords.py $< $@
 
 abyss.dat : books/abyss.txt
-	python countwords.py books/abyss.txt abyss.dat
+	python countwords.py $< $@
 
 last.dat : books/last.txt
-	python countwords.py books/last.txt last.dat
+	python countwords.py $< $@
 
 .PHONY : clean
 clean :
