--- a/04_dependencies_on_data_and_code/Makefile
+++ b/04_dependencies_on_data_and_code/Makefile
@@ -19,6 +19,6 @@ last.dat : books/last.txt countwords.py
 clean :
 	rm -f *.dat results.txt
 
-.PHONY : list
-list:
+.PHONY : list_targets
+list_targets:
 	@LC_ALL=C $(MAKE) -pRrq -f $(lastword $(MAKEFILE_LIST)) : 2>/dev/null | awk -v RS= -F: '/^# File/,/^# Finished Make data base/ {if ($$1 !~ "^[#.]") {print $$1}}' | sort | egrep -v -e '^[^[:alnum:]]' -e '^$@$$'
