Adds testzipf.py as a dependency to the results.txt target

--- a/04_dependencies_on_data_and_code/Makefile
+++ b/04_dependencies_on_data_and_code/Makefile
@@ -1,5 +1,5 @@
 # Generate summary table.
-results.txt : isles.dat abyss.dat last.dat
+results.txt : isles.dat abyss.dat last.dat testzipf.py
 	python testzipf.py $^ > $@
 
 # Count words.
