Revert "Adds testzipf.py as a dependency to the results.txt target"
This reverts commit def7464e49af6103684da67a9ab5e21a3154585c.

--- a/04_dependencies_on_data_and_code/Makefile
+++ b/04_dependencies_on_data_and_code/Makefile
@@ -1,5 +1,5 @@
 # Generate summary table.
-results.txt : isles.dat abyss.dat last.dat testzipf.py
+results.txt : isles.dat abyss.dat last.dat
 	python testzipf.py $^ > $@
 
 # Count words.
