modifies results.txt rule (testzipf.py as 1st dependency with $< & *.dat for action)

--- a/04_dependencies_on_data_and_code/Makefile
+++ b/04_dependencies_on_data_and_code/Makefile
@@ -1,6 +1,6 @@
 # Generate summary table.
-results.txt : isles.dat abyss.dat last.dat
-	python testzipf.py $^ > $@
+results.txt : testzipf.py isles.dat abyss.dat last.dat
+	python $< *.dat > $@
 
 # Count words.
 .PHONY : dats
