Uses variables LANGUAGE, COUNT_SRC, COUNT_EXE, ZIPF_SRC, ZIPF_EXE in the rules

--- a/06_variables/Makefile
+++ b/06_variables/Makefile
@@ -1,6 +1,12 @@
+LANGUAGE=python
+COUNT_SRC=countwords.py
+COUNT_EXE=$(LANGUAGE) $(COUNT_SRC)
+ZIPF_SRC=testzipf.py
+ZIPF_EXE=$(LANGUAGE) $(ZIPF_SRC)
+
 # Generate summary table.
-results.txt : testzipf.py isles.dat abyss.dat last.dat
-	python $< *.dat > $@
+results.txt : $(ZIPF_SRC) isles.dat abyss.dat last.dat
+	$(ZIPF_EXE) *.dat > $@
 
 # Count words.
 .PHONY : dats
@@ -9,8 +15,8 @@ dats : isles.dat abyss.dat last.dat
 # Build a .dat file from the corresponding .txt file in books/
 # “In order to build a file named [something].dat (i.e. the target), find a file named books/[that same something].txt (i.e. the dependency) and run countwords.py [the dependency] [the target].”
 # The Make % wildcard can only be used in a target and in its dependencies. It cannot be used in actions.
-%.dat : books/%.txt countwords.py
-	python countwords.py $< $*.dat
+%.dat : books/%.txt $(COUNT_SRC)
+	$(COUNT_EXE) $< $*.dat
 
 .PHONY : clean
 clean :
