--- a/07_functions/Makefile
+++ b/07_functions/Makefile
@@ -2,9 +2,13 @@ include config.mk
 
 TXT_FILES=$(wildcard books/*.txt)
 
+# patsubst (‘pattern substitution’) takes a pattern, a replacement string and a list of names in that order; each name in the list that matches the pattern is replaced by the replacement string.
+DAT_FILES=$(patsubst books/%.txt, %.dat, $(TXT_FILES))
+
 .PHONY : variables
 variables:
 	@echo TXT_FILES: $(TXT_FILES)
+	@echo DAT_FILES: $(DAT_FILES)
 
 # Generate summary table.
 results.txt : $(ZIPF_SRC) isles.dat abyss.dat last.dat
