--- a/08_self_documenting_makefiles/Makefile
+++ b/08_self_documenting_makefiles/Makefile
@@ -3,11 +3,11 @@ include config.mk
 TXT_FILES=$(wildcard books/*.txt)
 DAT_FILES=$(patsubst books/%.txt, %.dat, $(TXT_FILES))
 
-# Generate summary table.
+## results.txt : Generate Zipf summary table.
 results.txt : $(ZIPF_SRC) $(DAT_FILES)
 	$(ZIPF_EXE) $(DAT_FILES) > $@
 
-# Count words.
+## dats        : Count words in text files.
 .PHONY : dats
 dats : $(DAT_FILES)
 
@@ -15,10 +15,17 @@ dats : $(DAT_FILES)
 %.dat : books/%.txt $(COUNT_SRC)
 	$(COUNT_EXE) $< $@
 
+## clean       : Remove auto-generated files.
 .PHONY : clean
 clean :
 	rm -f $(DAT_FILES) results.txt
+
+## variables   : Print variables.
 .PHONY : variables
 variables:
 	@echo TXT_FILES: $(TXT_FILES)
 	@echo DAT_FILES: $(DAT_FILES)
+
+.PHONY : help
+help : Makefile
+	@sed -n 's/^##//p' $<
