adds deletion of callgrind.out.* to the clean target

--- a/08_self_documenting_makefiles/Makefile
+++ b/08_self_documenting_makefiles/Makefile
@@ -19,6 +19,7 @@ dats : $(DAT_FILES)
 .PHONY : clean
 clean :
 	rm -f $(DAT_FILES) results.txt
+	rm -f callgrind.out.*
 
 #: variables   : Print variables.
 .PHONY : variables
