sets up variables PLOT_SRC, PLOT_EXE and rules to make and clean png files

--- a/08_self_documenting_makefiles/Makefile
+++ b/08_self_documenting_makefiles/Makefile
@@ -2,6 +2,7 @@ include config.mk
 
 TXT_FILES=$(wildcard books/*.txt)
 DAT_FILES=$(patsubst books/%.txt, %.dat, $(TXT_FILES))
+PNG_FILES=$(patsubst %.dat, %.png, $(DAT_FILES))
 
 #: results.txt : Generate Zipf summary table.
 results.txt : $(ZIPF_SRC) $(DAT_FILES)
@@ -15,10 +16,18 @@ dats : $(DAT_FILES)
 %.dat : books/%.txt $(COUNT_SRC)
 	$(COUNT_EXE) $< $@
 
+#: pngs        : Plot wordcount from dat files
+.PHONY : pngs
+pngs : $(PNG_FILES)
+
+# Build each .png file from the corresponding .dat file
+%.png : %.dat
+	$(PLOT_EXE) $< $@
+
 #: clean       : Remove auto-generated files.
 .PHONY : clean
 clean :
-	rm -f $(DAT_FILES) results.txt
+	rm -f $(DAT_FILES) $(PNG_FILES) results.txt
 	rm -f callgrind.out.*
 
 #: variables   : Print variables.
@@ -26,6 +35,7 @@ clean :
 variables:
 	@echo TXT_FILES: $(TXT_FILES)
 	@echo DAT_FILES: $(DAT_FILES)
+	@echo PNG_FILES: $(PNG_FILES)
 
 #: help        : Show help on available targets in the Makefile
 .PHONY : help
