--- a/08_self_documenting_makefiles/Makefile
+++ b/08_self_documenting_makefiles/Makefile
@@ -4,6 +4,10 @@ TXT_FILES=$(wildcard books/*.txt)
 DAT_FILES=$(patsubst books/%.txt, %.dat, $(TXT_FILES))
 PNG_FILES=$(patsubst %.dat, %.png, $(DAT_FILES))
 
+#: all         : build the targets 'results.txt' and 'pngs'
+.PHONY : all
+all : results.txt pngs
+
 #: results.txt : Generate Zipf summary table.
 results.txt : $(ZIPF_SRC) $(DAT_FILES)
 	$(ZIPF_EXE) $(DAT_FILES) > $@
